welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:1: error: identifier expected but integer literal found.
   var cpt :Int=-1
                 ^